# cloud-based

./: .env  .gitignore  CMakeLists.txt  README.md  event_storage.cpp  event_transfer.cpp  transfer.py
back-end/: CMakeLists.txt  test.cpp
include/: amqp_connection.cpp  amqp_connection.h
module/: database.py  message.py  rabbitmq.py
python/: receive.py  receive_cloud.py  send.py
sample/: cloud_msg.json  event_transfer.py  message.json.template  model_msg.json  receive_cloud.py
src/: cloud-side.py  edge-side.py  test.py
test/: .env  ML_engine_sim.cpp  bucket.py  cap.py  event_sample.json  event_template.template  postgresql_test.py  receive.py  receive_cloud.cpp  send.py  send_cloud.cpp  send_to_cloud.py  test.cpp
unit_demo/: CMakeLists.txt  fake-pub.py
unit_demo/gnss/: nmea.py
unit_demo/model/: gen.py  image.py  local-consume.py  local-message.txt
unit_demo/streaming/: client.py  concepts.c  hello_world.c  rtsp  rtsp.c  rtsp_server  rtsp_server.c  rtsp_server.py  rtsp_server2  rtsp_server2.c  streaming.c  test.c
